--- a/fer_stock_compute_sourcing/views/fer_history_stock_orderpoint_views.xml
+++ b/fer_stock_compute_sourcing/views/fer_history_stock_orderpoint_views.xml
@@ -38,7 +38,7 @@
                     <notebook>
                         <page string="Reglas efimeras de abastecimiento">
                             <field string="Reglas de abastecimiento" widget="one2many" name="fer_stock_rules_efim_ids">
-                                <tree editable="bottom">
+                                <tree>
                                     <field name="product_id"/>
                                     <field name="location_id"/>
                                     <field name="fer_brand_name"/>
