--- a/fer_stock_compute_sourcing/views/fer_product_template_views_inherit.xml
+++ b/fer_stock_compute_sourcing/views/fer_product_template_views_inherit.xml
@@ -5,7 +5,7 @@
         <field name="model">product.template</field>
         <field name="inherit_id" ref="product.product_template_only_form_view"/>
         <field name="arch" type="xml">
-            <xpath expr="//field[@name='unspsc_code_id']" position="before">
+            <xpath expr="//field[@name='barcode']" position="after">
                 <field name="fer_brand_ids"/>
             </xpath>
         </field>
